--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,12 @@ cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
 cycler==0.10.0
+dataclasses==0.6
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
+filelock==3.0.12
+future==0.18.2
 gast==0.3.3
 gensim==3.8.3
 google-auth==1.23.0
@@ -82,9 +85,12 @@ regex==2020.10.28
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
+sacremoses==0.0.43
 scikit-learn==0.23.2
 scipy==1.5.4
 Send2Trash==1.5.0
+sentence-transformers==0.3.9
+sentencepiece==0.1.91
 six==1.15.0
 sklearn==0.0
 smart-open==3.0.0
@@ -96,9 +102,13 @@ termcolor==1.1.0
 terminado==0.9.1
 testpath==0.4.4
 threadpoolctl==2.1.0
+tokenizers==0.9.3
+torch==1.7.0
 tornado==6.1
 tqdm==4.51.0
 traitlets==5.0.5
+transformers==3.5.1
+typing-extensions==3.7.4.3
 urllib3==1.25.11
 wcwidth==0.2.5
 webencodings==0.5.1
